<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/login_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:title="@string/login_title"
            app:titleTextColor="@android:color/white">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_appbar_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@mipmap/app_icon"
        android:minHeight="70dp"
        android:minWidth="70dp" />

    <!--设置最大长度-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_phone"
        style="@style/Til"
        android:layout_below="@+id/iv_app_icon"
        android:layout_marginTop="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:hintTextAppearance="@style/TextAppearance.Design.Hint">
        <EditText
            android:id="@+id/et_phone"
            style="@style/et_single_line"
            android:hint="@string/phone"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pwd"
        style="@style/Til"
        android:layout_below="@+id/til_phone"
        app:counterEnabled="true"
        app:counterMaxLength="14"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorAppearance"
        app:hintTextAppearance="@style/TextAppearance.Design.Hint"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/holo_blue_light">
        <EditText
            android:id="@+id/et_pwd"
            style="@style/et_single_line"
            android:hint="@string/pwd"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login_message"
        style="@style/btn_normal2"
        android:layout_below="@+id/til_pwd"
        android:layout_marginStart="35dp"
        android:text="@string/login_message"
        android:textColor="@android:color/holo_purple" />

    <Button
        android:id="@+id/btn_login"
        style="@style/btn_normal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_message"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:background="@android:color/transparent"
        android:minHeight="30dp"
        android:text="@string/reg_hint"
        android:textColor="@android:color/holo_purple" />
</RelativeLayout>
