<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/register_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:title="@string/register_title"
            app:titleTextColor="@color/text_white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/register_appbar_layout"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/app_icon"
        android:minHeight="70dp"
        android:minWidth="70dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_app_icon"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Til"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            app:hintTextAppearance="@style/TextAppearance.Design.Hint">

            <EditText
                android:id="@+id/et_phone"
                style="@style/et_single_line"
                android:hint="@string/phone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Til"
                android:layout_weight="0.25"
                android:layout_marginStart="0dp"
                app:counterEnabled="true"
                app:counterMaxLength="4"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorAppearance"
                app:hintTextAppearance="@style/TextAppearance.Design.Hint">
                <EditText
                    android:id="@+id/et_message"
                    android:hint="@string/message"
                    android:inputType="number"
                    style="@style/et_single_line" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_get_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="end|center_vertical"
                android:layout_weight="0.75"
                android:background="@drawable/selector_btn2"
                android:minHeight="30dp"
                android:text="@string/get_message"
                android:textColor="@color/text_black"
                android:textSize="14sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Til"
            android:layout_marginTop="0dp"
            app:counterEnabled="true"
            app:counterMaxLength="14"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance"
            app:hintTextAppearance="@style/TextAppearance.Design.Hint"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/holo_blue_light">
            <EditText
                android:id="@+id/et_pwd"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                style="@style/et_single_line" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_btn1"
            android:minWidth="100dp"
            android:minHeight="40dp"
            android:text="@string/register_title"
            android:textColor="@color/text_black"
            android:textSize="18sp" />


    </LinearLayout>

</RelativeLayout>
