<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGray"
    android:visibility="visible">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:title="@string/personal_center"
            app:titleTextColor="@android:color/white" />
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/rl_avatar"
                style="@style/rl_personal_center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/avatar"
                    android:textColor="@color/text_black"
                    android:textSize="22sp" />
                <ImageView
                    android:id="@+id/image_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="50dp"
                    android:gravity="center" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_name"
                style="@style/rl_personal_center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/text_black"
                    android:textSize="22sp" />
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:textSize="20sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/rl_gender"
                style="@style/rl_personal_center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/gender"
                    android:textColor="@color/text_black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:textSize="20sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_birth"
                style="@style/rl_personal_center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/birthday"
                    android:textColor="@color/text_black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:textSize="20sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/chevron_right"
                    android:textSize="20sp"/>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_email"
                style="@style/rl_personal_center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/email"
                    android:textColor="@color/text_black"
                    android:textSize="22sp" />
                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:textSize="16sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_gov_id"
                style="@style/rl_personal_center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/gov_id"
                    android:textColor="@color/text_black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_govid"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:textSize="16sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>


            <RelativeLayout style="@style/rl_personal_center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/phone"
                    android:textColor="@color/text_black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:textSize="20sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/block" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_education"
                style="@style/rl_personal_center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:text="@string/education"
                    android:textColor="@color/text_black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_edu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="50dp"
                    android:gravity="center"
                    android:textSize="20sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/chevron_right" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_introduction"
                style="@style/rl_personal_center">
                <TextView
                    android:id="@+id/text_self_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentTop="true"
                    android:text="@string/introduction"
                    android:gravity="start"
                    android:textColor="@color/text_black"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@null"
                    android:src="@drawable/chevron_right" />


                <TextView
                    android:id="@+id/tv_introduction"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="100dp"
                    android:singleLine="false"
                    android:layout_below="@id/text_self_intro"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:gravity="top|start"
                    android:textSize="14sp"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
